# rust0

./: Cargo.toml  build.rs  rust-devel
data/gpx/: 2018-11-28T12:00:00.000Z-first-long-hike-in-aljezur-area.gpx  2018-12-15T11:37:32.045Z-walk.with-kids-in-amoreira.gpx  2018-12-15T18:43:03.923Z-walk-between-monteclerigo-and-arrifana.gpx  2018-12-16T22:45:32.227Z-schiefes-quadrat.gpx  2019-01-12T16:00:00.078Z-Wanderung-das-Tal-hoch-Rückweg.gpx  2019-01-12T16:00:00.078Z-aaaa.gpx
frontend/: code.js  index.html
frontend/css/: app.css
src/: config.rs  files.rs  lib.rs  main.rs  server.rs  state.rs  tiles.rs  util.rs
src/api/: gpx.rs  mod.rs  settings.rs
